docs: CC BY-NC-ND 4.0 라이센스 추가
- 프로젝트 루트에 LICENSE.md 파일 생성
- CC BY-NC-ND 4.0 라이센스 전문 추가
- README.md 라이센스 섹션 업데이트
  - 라이센스 배지 추가
  - 라이센스 조건 상세 설명
  - LICENSE.md 파일 참조 링크 추가

이 라이센스는 다음을 의미합니다:
- 저작자 표시(BY): 원저작자를 반드시 표시해야 함
- 비영리(NC): 상업적 목적으로 사용 불가
- 변경 금지(ND): 원본 수정 및 2차적 저작물 생성 불가